--- a/tree.html
+++ b/tree.html
@@ -2,23 +2,20 @@
 <html>
 
 <head>
-    <title>webgl demo</title>
+    <title>fly</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="/css/tree/index.css">
     <style>
         *{margin:0;padding: 0;}
-        html,body{
-            height: 100%;
-            overflow: hidden;
-        }
     </style>
 </head>
 
 <body>
+<div id="world">
 
-
+</div>
 </body>
 <script src="http://go.163.com/2015/public/common/js/zepto.min.js"></script>
-<!-- <script src="/script/lib/orienter.js"></script> -->
-<script type="text/javascript" src="/script/lib/three.min.js"></script>
-<script type="text/javascript" src="/script/main/index.js"></script>
+<script type="text/javascript" src="/script/lib/tweenMax.min.js"></script>
+<script type="text/javascript" src="/script/tree/index.js"></script>
 </html>
