--- a/fly.html
+++ b/fly.html
@@ -4,7 +4,7 @@
 <head>
     <title>fly</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/css/fly/fly.css">
+    <link rel="stylesheet" href="/css/fly/index.css">
     <style>
         *{margin:0;padding: 0;}
     </style>
@@ -62,5 +62,5 @@
 <!-- <script src="/script/lib/orienter.js"></script> -->
 <script type="text/javascript" src="/script/lib/three.min.js"></script>
 <script type="text/javascript" src="/script/lib/tweenMax.min.js"></script>
-<script type="text/javascript" src="/script/fly.js"></script>
+<script type="text/javascript" src="/script/fly/index.js"></script>
 </html>
