--- a/tree.html
+++ b/tree.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>fly</title>
+    <title>tree</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/css/tree/index.css">
+    <link rel="stylesheet" href="/script/tree/index.css">
     <style>
         *{margin:0;padding: 0;}
     </style>
